# devcert

./: Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 5zm0rnd6cq9i0il51lbiqc0q3lh9azqf-source  q8g64s6xrhk857hdpgb6j979370xcm04-source  x4nr5hlc50bysssb3kh9fg6l7f3w4qhn-source
src/: certgen.rs  certstore.rs  error.rs  main.rs
src/trust/: firefox_store.rs  mod.rs  win32_store.rs
