[package]
name = "devcert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
color-eyre = "0.6.2"
directories = "4.0.1"
rcgen = "0.10.0"
thiserror = "1.0.39"
time = "0.3.20"
